syntax = "proto3";
package orbit.core;

message ActionLogID {
  string id = 1;  
}